# LibGM

./: .gitignore  2  Cargo.toml  README.md  _empty1.win  _empty2.win  clippy.toml  detect_gm_version.txt  rustfmt.toml  ts124.txt  tsinfo.txt
benches/: builder.rs  (+2 more)
libgm/: Cargo.toml
libgm-cli/: Cargo.toml
libgm-cli/datafiles/: .gitkeep
libgm-cli/resources/: FOLDER.txt
libgm-cli/src/: action.rs  actions.rs  cli.rs  diff.rs  dir.rs  dump.rs  info.rs  lib.rs  logging.rs  main.rs  tests.rs
libgm-cli/src/actions/: enable_debug.rs  shuffle_textures.rs
libgm-cli/src/data_files/: README.md
libgm-cli/src/dump/: sprites.rs  texture_pages.rs
libgm-cli/src/tests/: assembler.rs  decompiler.rs
libgm-cli/tests/: e2e.rs
libgm/macros/: Cargo.toml
libgm/macros/src/: lib.rs  list_chunk.rs  named_list_chunk.rs  num_enum.rs
libgm/src/: _spec.rs  actions.rs  error.rs  gamemaker.rs  gm_enum.rs  gml.rs  lib.rs  prelude.rs  util.rs  wad.rs
libgm/src/actions/: savestates.rs  toggle_debug.rs
libgm/src/actions/toggle_debug/: chapter1_old.rs  chapter3.rs  deltarune.rs  demo_lts_ch1.rs  demo_lts_ch2.rs  demo_prelts.rs  undertale.rs
libgm/src/gamemaker/: chunk.rs  data.rs  deserialize.rs  detect_version.rs  elements.rs  gm_version.rs  mod.rs  qoi.rs  reference.rs  serialize.rs  version.rs  version_detection.rs
libgm/src/gamemaker/deserialize/: chunk.rs  integrity.rs  lists.rs  numbers.rs  reader.rs  resources.rs
libgm/src/gamemaker/elements/: animation_curve.rs  animation_curves.rs  audio_group.rs  audio_groups.rs  background.rs  backgrounds.rs  code.rs  data_files.rs  embedded_audio.rs  embedded_image.rs  embedded_images.rs  embedded_texture.rs  embedded_textures.rs  extension.rs  extensions.rs  feature_flag.rs  feature_flags.rs  filter_effect.rs  filter_effects.rs  font.rs  fonts.rs  function.rs  functions.rs  game_end.rs  game_object.rs  game_objects.rs  general_info.rs  global_init.rs  languages.rs  options.rs  particle_emitter.rs  particle_emitters.rs  particle_system.rs  particle_systems.rs  path.rs  paths.rs  room.rs  rooms.rs  script.rs  scripts.rs  (+21 more)
libgm/src/gamemaker/elements/animation_curve/: channel.rs
libgm/src/gamemaker/elements/embedded_texture/: img.rs
libgm/src/gamemaker/elements/extension/: file.rs  function.rs  option.rs
libgm/src/gamemaker/elements/font/: glyph.rs  kerning.rs
libgm/src/gamemaker/elements/function/: code_local.rs
libgm/src/gamemaker/elements/game_object/: event.rs
libgm/src/gamemaker/elements/general_info/: flags.rs  function_classifications.rs  gms2.rs
libgm/src/gamemaker/elements/options/: constant.rs  new.rs  old.rs
libgm/src/gamemaker/elements/room/: background.rs  flags.rs  game_object.rs  layer.rs  tile.rs  view.rs
libgm/src/gamemaker/elements/sequence/: track.rs
libgm/src/gamemaker/elements/sprite/: nine_slice.rs  spine.rs  swf.rs
libgm/src/gamemaker/elements/ui_node/: effect.rs  flex.rs  layer.rs  object.rs  sequence.rs  sprite.rs  text_item.rs
libgm/src/gamemaker/serialize/: builder.rs  chunk.rs  lists.rs  numbers.rs  pointers.rs  resources.rs  traits.rs  versioning.rs
libgm/src/gamemaker/version_detection/: acrv.rs  agrp.rs  bgnd.rs  code.rs  extn.rs  font.rs  func.rs  objt.rs  psem.rs  room.rs  sond.rs  sprt.rs  tgin.rs  txtr.rs
libgm/src/gml/: analysis.rs  assembler.rs  assembly.rs  decompiler.rs  disassembler.rs  highlevel.rs  instruction.rs  instructions.rs  mod.rs  name_validation.rs  opcodes.rs
libgm/src/gml/assembly/: assembler.rs  disassembler.rs
libgm/src/gml/assembly/assembler/: data_types.rs  reader.rs
libgm/src/gml/decompiler/: accessors.rs  control_flow.rs  decompile_context.rs  vm_constants.rs
libgm/src/gml/decompiler/control_flow/: blocks.rs  fragments.rs  node_ref.rs  short_circuits.rs  static_inits.rs
libgm/src/gml/highlevel/: compile.rs  node.rs  token.rs
libgm/src/gml/highlevel/node/: block.rs
libgm/src/gml/highlevel/token/: lexer.rs
libgm/src/gml/instruction/: asset_reference.rs  category.rs  code_variable.rs  comparison_type.rs  data_type.rs  instance_type.rs  push_value.rs  variable_type.rs
libgm/src/util/: assert.rs  bench.rs  bitfield.rs  fmt.rs  hint.rs  init.rs  mod.rs  panic.rs  rng.rs  smallmap.rs  unwind.rs
libgm/src/wad/: build.rs  chunk.rs  data.rs  deserialize.rs  elem.rs  elements.rs  memfree.rs  memory.rs  parse.rs  reference.rs  serialize.rs  version.rs  version_detection.rs
libgm/src/wad/deserialize/: chunk.rs  integrity.rs  lists.rs  numbers.rs  reader.rs  resources.rs
libgm/src/wad/elem/: animation_curve.rs  audio.rs  audio_group.rs  background.rs  code.rs  data_file.rs  embedded_image.rs  extension.rs  feature_flag.rs  filter_effect.rs  font.rs  function.rs  game_end.rs  game_object.rs  general_info.rs  global_init.rs  language.rs  options.rs  particle_emitter.rs  particle_system.rs  path.rs  room.rs  script.rs  sequence.rs  shader.rs  sound.rs  sprite.rs  string.rs  tag.rs  texture_group_info.rs  texture_page.rs  texture_page_item.rs  tileset.rs  timeline.rs  ui_node.rs  variable.rs
libgm/src/wad/elem/animation_curve/: channel.rs
libgm/src/wad/elements/: animation_curve.rs  audio.rs  audio_group.rs  background.rs  code.rs  data_file.rs  embedded_audio.rs  embedded_image.rs  embedded_texture.rs  extension.rs  feature_flag.rs  filter_effect.rs  font.rs  function.rs  game_end.rs  game_object.rs  general_info.rs  global_init.rs  language.rs  options.rs  particle_emitter.rs  particle_system.rs  path.rs  room.rs  script.rs  sequence.rs  shader.rs  sound.rs  sprite.rs  string.rs  tag.rs  texture_group_info.rs  texture_page.rs  texture_page_item.rs  timeline.rs  ui_node.rs  variable.rs
libgm/src/wad/parse/: chunk.rs  integrity.rs  lists.rs  numbers.rs  reader.rs  resources.rs
libgm/src/wad/serialize/: builder.rs  chunk.rs  lists.rs  numbers.rs  pointers.rs  resources.rs  versioning.rs
libgm/src/wad/version_detection/: acrv.rs  agrp.rs  bgnd.rs  code.rs  extn.rs  font.rs  func.rs  objt.rs  psem.rs  room.rs  sond.rs  sprt.rs  tgin.rs  txtr.rs
macros/: Cargo.toml  README.md
macros/src/: lib.rs  list_chunk.rs  named_list_chunk.rs  num_enum.rs
(+490 files in other folders)
