[package]
name = "libgm"
version = "0.1.0"
authors = ["BioTomateDE <latus.kati@gmail.com>"]
edition = "2024"
description = "A tool for modding, decompiling and unpacking GameMaker games"
readme = "README.md"
repository = "https://github.com/BioTomateDE/LibGM"
license = "GPL-3"
keywords = ["gamemaker", "gml", "decompiler", "modding", "undertale"]
categories = ["parsing", "game-development", "encoding"]

[features]
no-integrity-checks = []

# For normal debugging/testing
# - Fast compile time
# - Usually decent runtime
# - All debug information
[profile.dev]
opt-level = 0
debug = 2
strip = false
debug-assertions = true
overflow-checks = true


# For debugging/testing concerning slow operations
# - Slower compile time
# - Fast runtime
# - Most debug information but inspecting variables in the debugger might not work properly
[profile.release]
opt-level = 2   # might need tweaking
lto = "thin"
debug = "limited"
strip = false
codegen-units = 16
incremental = true


# For actual releases for users.
# - Very slow compile time
# - Fastest runtime
# - File, line and function debug symbols
[profile.full-release]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "debuginfo"
incremental = false


[dependencies]
arrayvec = "0.7.6"
biologischer-log = { git = "https://github.com/BioTomateDE/rust-biologischer-log.git" }
bzip2 = "0.5.2"
chrono = "0.4.42"
colored = "3.0.0"
cpu-time = "1.0.0"
enum-as-inner = "0.6.1"
image = "0.25.8"
log = "0.4.28"
num_enum = "0.7.5"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tynm = "0.2.0"
uuid = "1.18.1"
