[workspace]
members = ["libgm", "libgm-cli", "macros"]
resolver = "3"

[workspace.package]
authors = ["BioTomateDE <biotomatede@proton.me>"]
edition = "2024"
readme = "README.md"
repository = "https://codeberg.org/BioTomateDE/LibGM"
license = "GPL-3.0"

[profile.release]
overflow-checks = true
debug-assertions = true
