[package]
name = "libgm-cli"
version = "0.0.0"
description = "A simple command line interface for interacting with LibGM"
keywords = ["cli", "gamemaker"]
categories = ["command-line-utilities"]
publish = false
authors.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[dependencies.libgm]
path = "../libgm"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
colored = "3.1"
env_logger = "0.11"
log = "0.4"
similar-asserts = "2.0"
