[package]
name = "libgm-cli"
version = "0.0.0"
description = "A simple command line interface for interacting with LibGM"
keywords = ["cli", "gamemaker"]
categories = ["command-line-utilities"]
publish = false
authors.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[dependencies.libgm]
path = "../libgm"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
env_logger = "0.11.10"
log = "0.4.29"
similar-asserts = "2.0.0"

[dev-dependencies]
snafu.workspace = true
sha2.workspace = true

[features]
test-undertale-1_0_8win = []
test-deltarune-1to4-1_0_4win = []
