[package]
name = "libgm-cli"
version = "0.0.0"
description = "A simple command line interface for interacting with LibGM"
keywords = ["cli", "gamemaker"]
categories = ["command-line-utilities"]
publish = false
authors.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[dependencies.libgm]
path = "../libgm"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
env_logger = "0.11.10"
log = "0.4.29"
similar-asserts = "2.0.0"

[dev-dependencies]
sha2 = "0.11"

[features]
test-undertale-100 = []
test-undertale-101 = []
test-undertale-108 = []
test-deltarune-ch1234 = []
test-all = ["test-undertale-100", "test-undertale-101", "test-undertale-108", "test-deltarune-ch1234"]
