[package]
name = "libgm"
version = "0.5.2"
description = "A tool for modding, unpacking and decompiling GameMaker games"
keywords = ["gamemaker", "gml", "decompiler", "modding", "undertale"]
categories = ["parser-implementations", "game-development", "encoding"]
authors.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = ["catch-panic", "check-integrity", "bzip2-image", "png-image"]
full = [
    "catch-panic",
    "check-integrity",
    "game-creation-timestamp",
    "bzip2-image",
    "png-image",
]

catch-panic = []
check-integrity = []
game-creation-timestamp = ["dep:chrono"]
bzip2-image = ["dep:bzip2"]
png-image = ["image/png"]

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"

[badges]
maintenance.status = "actively-developed"

# Attribute macros (num_enum, list_chunk, named_list_chunk)
[dependencies.macros]
version = "0.2.0"
path = "../macros"
package = "libgm-macros"

# GMS2 general info checksum
[dependencies.dotnet-rng]
version = "1.0"

# BZip2+QOI encoded images
[dependencies.bzip2]
version = "0.6"
optional = true

# Needed for Game Creation Timestamp in General Info
[dependencies.chrono]
version = "0.4"
default-features = false
optional = true

# Needed to (potentially) deserialize PNG images
[dependencies.image]
version = "0.25"
default-features = false

# Logging
[dependencies.log]
version = "0.4"

# Primitive number enums
[dependencies.num_enum]
version = "0.7"

