[package]
name = "libgm"
version = "0.7.0-beta"
description = "A tool for unpacking and modding GameMaker games"
keywords = ["gamemaker", "modding", "game-modding", "undertale"]
categories = ["parser-implementations", "game-development", "encoding"]
authors.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = ["catch-panic", "check-integrity", "bzip2-image", "png-image"]
catch-panic = []
check-integrity = []
bzip2-image = ["dep:bzip2"]
png-image = ["image/png"]

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"

[badges]
maintenance.status = "actively-developed"


# GMS2 general info checksum
[dependencies.dotnet-rng]
version = "1.0.5"

# BZip2+QOI encoded images
[dependencies.bzip2]
version = "0.6.1"
optional = true

# Needed for Game Creation Timestamp in General Info
[dependencies.chrono]
version = "0.4.44"
default-features = false

# Needed to (potentially) deserialize PNG images
[dependencies.image]
version = "0.25.10"
default-features = false

# Logging
[dependencies.log]
version = "0.4.29"
