[package]
name = "libgm"
version = "0.7.0-beta"
description = "A tool for unpacking and modding GameMaker games"
keywords = ["gamemaker", "modding", "game-modding", "undertale"]
categories = ["parser-implementations", "game-development", "encoding"]
authors.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = ["catch-panic", "check-integrity", "bzip2-image", "png-image"]
catch-panic = []
check-integrity = []
bzip2-image = ["dep:bzip2"]
png-image = ["image/png"]

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"

[badges]
maintenance.status = "actively-developed"

[dependencies]
bitflags = "2.13"
bzip2 = { version = "0.6", optional = true }            # BZip2+QOI encoded images
chrono = { version = "0.4", default-features = false }  # Game Creation Timestamp
dotnet-rng = "1.0"                                      # GMS2 general info checksum
image = { version = "0.25", default-features = false }  # Texture Pages (+ PNG)
log = "0.4.29"
