[package]
name = "libgm-macros"
version = "0.1.1"
edition = "2024"
description = "Internal attribute macros for LibGM"
readme = "./README.md"
repository = "https://github.com/BioTomateDE/LibGM/"
license = "GPL-3.0"
keywords = ["proc-macro", "num-enum"]
categories = ["development-tools"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.42"
syn = "2.0.111"
