[package]
name = "libgm-macros"
version = "0.2.0"
edition = "2024"
description = "Internal attribute macros for LibGM"
readme = "./README.md"
repository = "https://codeberg.org/BioTomateDE/LibGM/"
license = "GPL-3.0"
keywords = ["proc-macro", "num-enum"]
categories = ["development-tools"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = "2.0"
