[package]
name = "libgm-macros"
version = "0.2.0"
description = "Internal attribute macros for LibGM"
keywords = ["proc-macro", "num-enum"]
categories = ["development-tools"]
authors.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = "2.0"
