[package]
name = "macros"
version = "0.1.0"
edition = "2024"
description = "Num enum attribute macro for autoderive"
readme = "../../README.md"
repository = "https://github.com/BioTomateDE/LibGM/"
license = "GPL-3"
keywords = ["proc-macro", "num-enum"]
categories = ["development-tools"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.103"
quote = "1.0.42"
syn = "2.0.111"
